[gd_scene load_steps=10 format=3 uid="uid://4j1nfvp1tqfe"]

[ext_resource type="Script" path="res://scenes/gui/TopBar.gd" id="1_mdf7p"]
[ext_resource type="Theme" uid="uid://fwjw77asopv1" path="res://scenes/gui/themes/top_bar_theme.tres" id="1_pucu5"]
[ext_resource type="Texture2D" uid="uid://02l8yi5555fh" path="res://graphics/sprites/progress_bar/under.png" id="3_68f66"]
[ext_resource type="Texture2D" uid="uid://wrqkoqjgmk66" path="res://graphics/sprites/progress_bar/over.png" id="4_qecfx"]
[ext_resource type="Texture2D" uid="uid://dx47vjywc7s7w" path="res://graphics/sprites/progress_bar/progress.png" id="5_tpkbi"]
[ext_resource type="Script" path="res://scenes/gui/ProgressBar.gd" id="6_8fi6e"]
[ext_resource type="AudioStream" uid="uid://r2j8tvclxj3q" path="res://sounds/sfx/fertilizer_up/fertilizer_up_1.wav" id="7_tnral"]
[ext_resource type="AudioStream" uid="uid://brtognc28ebm0" path="res://sounds/sfx/fertilizer_up/fertilizer_up_2.wav" id="8_sqwed"]
[ext_resource type="AudioStream" uid="uid://diyliy5s6wj8b" path="res://sounds/sfx/fertilizer_up/fertilizer_up_3.wav" id="9_6yaf8"]

[node name="TopBar" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
script = ExtResource("1_mdf7p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.101961, 0.0745098, 1)

[node name="TextArea" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.315
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeanCounter" type="Label" parent="TextArea"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pucu5")
text = "X BEANS"
horizontal_alignment = 1
vertical_alignment = 2

[node name="BeansPerSecondCounter" type="Label" parent="TextArea"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pucu5")
theme_override_font_sizes/font_size = 30
text = "PER SECOND: X"
horizontal_alignment = 1

[node name="ProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.315
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
step = 0.01
texture_under = ExtResource("3_68f66")
texture_over = ExtResource("4_qecfx")
texture_progress = ExtResource("5_tpkbi")
script = ExtResource("6_8fi6e")

[node name="1" type="AudioStreamPlayer" parent="ProgressBar"]
stream = ExtResource("7_tnral")
volume_db = -0.225

[node name="2" type="AudioStreamPlayer" parent="ProgressBar"]
stream = ExtResource("8_sqwed")
volume_db = -0.225

[node name="3" type="AudioStreamPlayer" parent="ProgressBar"]
stream = ExtResource("9_6yaf8")
volume_db = -0.225
